--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@
         </div>
         <div class="credits">
           
-          Designed by <a href="https://bootstrapmade.com/">Aashutosh Gandotra</a>
+          Designed by <a href="">Aashutosh Gandotra</a>
         </div>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
